# Protobuf_tutorial

./: .gitconfig  .gitignore  README.md
Protobuf_learning/code/00_Protobuf_example/: Protobuf_example.proto
Protobuf_learning/code/01_complile_test/Cmake/: CMakeLists.txt
Protobuf_learning/code/01_complile_test/proto/: complile.sh  people_info.proto
Protobuf_learning/code/02_fields_optional_int/proto/: complile.sh  myprotobuf.proto
Protobuf_learning/code/03---fields_optional_string/proto/: myprotobuf.proto
Protobuf_learning/tutorial/: Protobuf_01_走入protobuf.md  Protobuf_02_Protobuf基本语法.md  Protobuf_02_Protobuf字段.md  Protobuf_02_基本语法.md  Protobuf_02_数据结构.md  Protobuf_03_字段.md  Protobuf_03_字段修饰词.md  Protobuf_03_字段类型.md  Protobuf_03_进阶语法.md  Protobuf_04_字段类型.md  Protobuf_04_文件编译.md  Protobuf_08_optional _numeric.md  Protobuf_10_optional_enum.md  Protobuf_11_message_function.md  Protobuf_11_repeated_numeric.md  Protobuf_12_oneof_numeric.md
example/01---complile/: CMakeLists.txt
example/01---complile/proto/: complile.sh  people_info.pb.cc  people_info.proto
example/02---fields/proto/: basic.proto  complile.sh  contacts.proto
example/02---fields/src/: fields_test.cpp
example/02---fields_optional_int/proto/: complile.sh  mynumber.proto
example/02---fields_optional_int/src/: fields_test.cpp  optional_int_test.cpp
example/03---fields_optional_string/proto/: basic.proto  complile.sh  mystring.proto
example/03---fields_optional_string/src/: fields_test.cpp  optional_string_test.cpp
example/04---Serialize/proto/: complile.sh
example/04---fields_optional_bytes/proto/: complile.sh  mybytes.proto
example/04---fields_optional_bytes/src/: fields_test.cpp  optional_string_test.cpp
example/04---fields_optional_enum/proto/: myprotobuf.proto
example/04---fields_optional_enum/src/: fields_optional_enum.cpp
example/05---fields_optional_enum/proto/: complile.sh  myenum.proto  mynumber.proto
example/05---fields_optional_enum/src/: fields_optional_enum.cpp  optional_int_test.cpp
example/06---fields_repeated_int/proto/: complile.sh  myrepeated.proto
example/06---fields_repeated_int/src/: fields_repeated_int.cpp
example/07---fields_oneof_int/proto/: complile.sh  myprotobuf.proto
example/07---fields_oneof_int/src/: fields_oneof_int.cpp
example/08---message_function/proto/: myprotobuf.proto
example/90---Function_CopyFrom/Cmake/: CMakeLists.txt
example/90---message_function/src/: message_function.cpp
example/99---Serialize/src/: use_contacts.cpp
example/99---writing_message/proto/: addressbook.pb.cc
example/example01/: CMakeLists.txt  complile.sh
example/example01-1/: CMakeLists.txt
example/example01-1/proto/: complile.sh  people_info.pb.cc  people_info.proto
example/example01/proto/: complile.sh  people_info.proto
example/example02/: CMakeLists.txt
example/example02/proto/: addressbook.proto  complile.sh
example/example1/proto/: contacts.proto
example/example2/Cmake/: CMakeLists.txt
example/example98/src/: main.cpp
example2/Cmake/: CMakeLists.txt
example2/config/: config.conf
example2/proto/: pointpillars_config.proto
note/: Protobuf_01_走入protobuf.md  Protobuf_02_构建数据结构.md  Protobuf_03_进阶语法.md  Protobuf_05_API.md  Protobuf_06_实战.md  Protobuf_1_简介.md  Protobuf_1_走入protobuf.md  Protobuf_2_字段.md  Protobuf_2_消息的创建.md  Protobuf_3_实战.md  Protobuf_3_语法.md  Protobuf_3_进阶语法.md  Protobuf_4_实战.md  Protobuf_4_编译.md  Protobuf_5_API.md
src/: use_contacts.cpp
tutorial/: Protobuf_01_走入protobuf.md  Protobuf_02_数据结构.md  Protobuf_02_构建数据结构.md  Protobuf_03_进阶语法.md  Protobuf_04_Protocol编译.md  Protobuf_04_文件编译.md  Protobuf_04_编译工具.md  Protobuf_05_ 库的使用.md  Protobuf_05_ 库编译.md  Protobuf_06_basic_fileds.md  Protobuf_06_optional _numeric.md  Protobuf_06_optional_fileds.md  Protobuf_06_字段.md  Protobuf_06_实战.md  Protobuf_07_C++中的使用.md  Protobuf_07_optional_string.md  Protobuf_08_optional_enum.md  Protobuf_09_optional_repeated.md  Protobuf_92_C++中的使用.md  Protobuf_99_basic_fileds.md  Protobuf_99_编译.md
(+6 files in other folders)
